[package]
name = "superstring"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5.9"
itertool = "0.1.0"
itertools = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }
utoipa = "1.1.0"
utoipa-swagger-ui = "1.1.0"
